# projekt-2-tpolskyy

./: .gitignore  CMakeLists.txt  README.md
include/: Food.hpp  Microwave.hpp
src/: Food.cpp  Microwave.cpp  PrintHello.cpp  main.cpp
xml/: dishes.xml
